# ComfyUI-Fooocus-Upscaler

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml
modules/: fooocus_upscale.py
