#  Edit the following fields to match your project

[project]
name = "comfyui-fooocus-upscaler"
description = "upscaler from fooocus"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub",]

[project.urls]
Repository = "https://github.com/jhj0517/ComfyUI-CustomNodes-Template"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "IOMisaka"
DisplayName = "Fooocus Upscaler 4X"
Icon = ""
